fix(economy): preserve currency backend registration order and harden the test fake
CurrencyBackendRegistry stored Map.copyOf of its LinkedHashMap, whose iteration
order is unspecified and randomised per JVM run, so ids() no longer honoured the
registration order its Javadoc promises and the startup error reads in. Store an
unmodifiable LinkedHashMap copy instead and cover it with an out-of-alphabetical
ordering test.

FakeCurrencyBackend backed its balances with a plain HashMap while its non-atomic
debit path reads and writes with no lock, so a concurrent debit could corrupt the
map structure on resize rather than merely lose an update. Back it with a
ConcurrentHashMap: the lost update the serialising decorator's test needs stays
reachable, structural corruption does not.

Add a FakeCurrencyBackend test for the max-balance rejection, which had no
coverage.